<resources>
    <string name="app_name">My Application</string>
    <string name="project_name">BOOKING TOUR</string>
    <string name="login">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="confirm">Xác nhận</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="signup">  Đăng ký  </string>
    <string name="name">Họ tên</string>
    <string name="gender">Giới tính</string>
    <string name="gender_male">Nam</string>
    <string name="gender_female">Nữ</string>
    <string name="dob">Ngày sinh</string>
    <string name="email">Email</string>
    <string name="phonenumber">Số điện thoại</string>
    <string name="address">Địa chỉ</string>
    <string name="loading">Loading...</string>
    <string name="time">Thời gian: </string>
    <string name="daystart">Ngày khởi hành: </string>
    <string name="location">Nơi đến: </string>
    <string name="price">Giá: </string>
    <string name="amount">Số lượng: </string>
    <string name="titleinfo">THÔNG TIN CÁ NHÂN</string>
    <string name="err_email">Vui lòng nhập email hợp lệ!</string>
    <string name="err_name">Vui lòng nhập họ tên hợp lệ!</string>
    <string name="err_phone">Vui lòng nhập số điện thoại hợp lệ!</string>
    <string name="err_address">Vui lòng nhập địa chỉ!</string>
    <string name="err_pass">Vui lòng nhập password!</string>
    <string name="err_slp">Vui lòng nhập số lượng vé cần mua!</string>
    <string name="buttoninfo">Xem/Sửa thông tin cá nhân</string>
    <string name="buttoncreate">Thêm tài khoản mới</string>
    <string name="buttonorder">Đơn hàng đã đặt</string>
    <string name="btnHome">Trang chủ</string>
    <string name="btnlogout">Đăng xuất</string>

</resources>