<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/back" />
            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:text="@string/titleinfo"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img_tour"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:src="@drawable/user1" />
        <TextView
            android:id="@+id/loginname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:text="ABC"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/name"

            android:textSize="20dp" />

        <EditText
            android:id="@+id/txt_name"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="@string/project_name"
            android:textSize="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/gender"
            android:textSize="20dp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPasswordSignup">

            <RadioButton
                android:id="@+id/radioBtnMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="80dp"
                android:text="@string/gender_male"
                android:textColor="#000000"
                android:textSize="18dp" />

            <RadioButton
                android:id="@+id/radioBtnFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_female"
                android:textColor="#000000"
                android:textSize="18dp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/dob"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txt_dob"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="@string/project_name"
            android:textSize="24dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="@string/project_name"
            android:textSize="24dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/phonenumber"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txt_phonenumber"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="@string/project_name"
            android:textSize="24dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/address"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txt_address"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="@string/project_name"
            android:textSize="24dp" />
        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:paddingTop="10dp"
            android:layout_gravity="center_horizontal|center"
            android:text="@string/edit"
            android:textSize="24sp"
            app:backgroundTint="#35D7EC"/>
    </LinearLayout>
</ScrollView>