<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/e"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_signin_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/yellowtail"
        android:gravity="center"
        android:shadowColor="#3F51B5"
        android:shadowDx="2"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/project_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#29AFE4"
        android:textSize="50sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:visibility="visible" />

    <EditText
        android:id="@+id/edtUsernameSignin"
        android:layout_width="338dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="@string/login"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/edtPasswordSignin"
        android:layout_width="338dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textSize="24sp" />


    <Button
        android:id="@+id/btnSigninConfirm"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/button_background"
        android:text="@string/confirm"
        android:textColor="#29AFE4"
        android:textSize="24sp"
        app:backgroundTint="#EDEBE9"
        />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#29AFE4"
        android:layout_gravity="center"
        android:text="@string/signup"/>

</LinearLayout>