<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_tour"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/user1" />
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:text="TEN USER"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/userrole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:text="ROLE USER"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/btn_infopage"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/buttoninfo"
            android:layout_marginTop="40dp"
            android:textColor="#000000"
            app:backgroundTint="@color/button_infopage" />
        <Button
            android:id="@+id/btn_createaccount"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/buttoncreate"
            android:layout_marginTop="30dp"
            android:textColor="#000000"
            app:backgroundTint="@color/button_infopage" />
        <Button
            android:id="@+id/btn_order"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/buttonorder"
            android:layout_marginTop="30dp"
            android:textColor="#000000"
            app:backgroundTint="@color/button_infopage" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            >
        <Button
            android:id="@+id/btn_home"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|left"
            android:drawableLeft="@drawable/house"
            app:backgroundTint="@color/white"
            android:text="@string/btnHome"
            android:textColor="@color/black"
            />
            <Button
            android:id="@+id/btn_logout"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="right|bottom"

            android:drawableRight="@drawable/logout"
            app:backgroundTint="@color/white"
            android:text="@string/btnlogout"
            android:textColor="@color/black"
            />
        </FrameLayout>
    </LinearLayout>
</ScrollView>