<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/l">

        <EditText
            android:id="@+id/txt_signup_email"
            android:layout_width="338dp"
            android:layout_height="52dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="10dp"

            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txt_signup_email"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_signup_confirm"
            android:layout_width="347dp"
            android:layout_height="61dp"
            android:layout_marginTop="48dp"
            android:text="@string/confirm"
            android:textColor="#F3F5F8"
            android:textSize="24sp"
            app:backgroundTint="#69D3E8"
            app:iconTint="#C11717"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_signup_address" />

        <EditText
            android:id="@+id/txt_signup_address"
            android:layout_width="338dp"
            android:layout_height="52dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_signup_phonenumber" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/address"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"

            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txt_signup_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.097"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txt_usernamesignup"
            android:layout_width="338dp"
            android:layout_height="52dp"
            android:layout_marginTop="55dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_signup_title" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/gender"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"

            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.099"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/phonenumber"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"

            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txt_signup_phonenumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.107"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txt_signup_phonenumber"
            android:layout_width="338dp"
            android:layout_height="52dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_signup_dob" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/password"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"

            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txt_signup_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.101"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/dob"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"

            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txt_signup_dob"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.102"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="236dp"
            android:layout_height="46dp"
            android:layout_marginTop="48dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_signup_password">

            <RadioButton
                android:id="@+id/radioBtn_Male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_male"
                android:textColor="@color/white"
                android:paddingRight="80dp"
                android:textSize="18dp" />
            <RadioButton
                android:id="@+id/radioBtn_Female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_female"
                android:textColor="@color/white"
                android:textSize="18dp" />
        </RadioGroup>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginBottom="10dp"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#F8F8F8"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txt_usernamesignup"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txt_signup_dob"
            android:layout_width="338dp"
            android:layout_height="52dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:inputType="textPersonName"

            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_signup_email" />

        <EditText
            android:id="@+id/txt_signup_password"
            android:layout_width="338dp"
            android:layout_height="52dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_usernamesignup" />

        <TextView
            android:id="@+id/txt_signup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="#73CFFE"
            android:fontFamily="@font/yellowtail"
            android:gravity="center"
            android:text="@string/signup"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FEFEFF"
            android:textSize="50sp"
            android:typeface="normal"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>