<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_tour"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:src="@drawable/g" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/titledaft"
                android:textAlignment="center"
                android:textColor="#1A8897"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/time"
                    android:drawablePadding="3dp"
                    android:paddingHorizontal="2dp"
                    android:text="@string/time"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_tourtime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="3 ngày 2 đêm"
                    android:textSize="18sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/calendar"
                    android:drawablePadding="3dp"
                    android:paddingHorizontal="2dp"
                    android:text="@string/daystart"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_tourstartdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="29/02/2021"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/compass"
                    android:drawablePadding="3dp"
                    android:paddingHorizontal="2dp"
                    android:text="@string/location"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_tourstartplace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TP. HCM"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/group"
                    android:drawablePadding="3dp"
                    android:paddingHorizontal="2dp"
                    android:text="@string/amount"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_toursize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="currentgroupsize/maxgroupsize"
                    android:textColor="#8BC34A"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:paddingHorizontal="2dp"
                    android:text="@string/price"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_tourprice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2.000.000 đ"
                    android:textColor="#F44336"
                    android:textSize="30sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal|center"

                android:text="@string/signup"
                android:textSize="24sp"
                app:backgroundTint="#35D7EC" />

            <TextView
                android:id="@+id/txt_decription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mô tả"
                android:textColor="#000000"
                android:textSize="24dp" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>